@@ -89,10 +89,10 @@ TIFF_VER=3.9.6
 GIFLIB_VER=4.1.6
 YASM_VER=1.3.0
 
-OPENSSL_VER=1.0.1c
-OPENSSL_SUBVER=1.0.1
 LIBGPG_ERROR_VER=1.10
 LIBGCRYPT_VER=1.5.0
+OPENSSL_VER=1.0.1c
+OPENSSL_SUBVER=1.0.1
 
 HARFBUZZ_VER=
 FREETYPE_VER=2.4.9
