@@ -91,11 +91,11 @@ TIFF_VER=4.0.3
 GIFLIB_VER=4.1.6
 YASM_VER=1.3.0
 
+LIBGPG_ERROR_VER=1.12
+LIBGCRYPT_VER=1.5.3
 # OPENSSL_VER=1.0.1f
 OPENSSL_VER=1.0.1u
 OPENSSL_SUBVER=${OPENSSL_VER}
-LIBGPG_ERROR_VER=1.12
-LIBGCRYPT_VER=1.5.3
 
 # HARFBUZZ_VER=0.9.27
 # FREETYPE_VER=2.5.2
