@@ -95,11 +95,11 @@ TIFF_VER=4.0.7
 GIFLIB_VER=5.1.4
 YASM_VER=1.3.0
 
+LIBGPG_ERROR_VER=1.26
+LIBGCRYPT_VER=1.7.6
 # OPENSSL_VER=1.0.1f
 OPENSSL_VER=1.0.2k
 OPENSSL_SUBVER=${OPENSSL_VER}
-LIBGPG_ERROR_VER=1.25
-LIBGCRYPT_VER=1.7.3
 
 # HARFBUZZ_VER=0.9.27
 # FREETYPE_VER=2.5.2
