@@ -92,10 +92,10 @@ TIFF_VER=3.8.2
 GIFLIB_VER=4.1.6
 YASM_VER=1.3.0
 
-OPENSSL_VER=0.9.8n
-OPENSSL_SUBVER=0.9.x
 LIBGPG_ERROR_VER=1.4
 LIBGCRYPT_VER=1.4.4
+OPENSSL_VER=0.9.8n
+OPENSSL_SUBVER=0.9.x
 
 HARFBUZZ_VER=
 FREETYPE_VER=2.4.2
