@@ -2,6 +2,8 @@
 * Update in all configs:
   - FFMPEG_VER from 3.2.1 to 3.2.4
 * Update in all static configs:
+  - LIBGPG_ERROR_VER from 1.25 to 1.26
+  - LIBGCRYPT_VER from 1.7.3 to 1.7.6
   - OPENSSL_VER from 1.0.2j to 1.0.2k
 
 --- v2.1 (2017-01-18) ---
